added protection for feed and oembed endpoint

--- a/wp-author-security/languages/wp-author-security-de_DE.po
+++ b/wp-author-security/languages/wp-author-security-de_DE.po
@@ -1,94 +1,113 @@
+# Translation of Plugins - WP Author Security - Stable (latest release) in German
+# This file is distributed under the same license as the Plugins - WP Author Security - Stable (latest release) package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Author Security\n"
-"POT-Creation-Date: 2020-07-28 13:20+0200\n"
-"PO-Revision-Date: 2020-07-28 13:20+0200\n"
-"Last-Translator: \n"
-"Language-Team: WP Author Security\n"
-"Language: de_DE\n"
+"PO-Revision-Date: 2021-08-10 09:34+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4\n"
-"X-Poedit-Basepath: ..\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 2.4.2\n"
+"Language: de\n"
+"Project-Id-Version: Plugins - WP Author Security - Stable (latest release)\n"
+"POT-Creation-Date: \n"
+"Last-Translator: \n"
+"Language-Team: WP Author Security\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;esc_attr_e\n"
-"X-Poedit-SearchPath-0: wp-author-security.php\n"
-"X-Poedit-SearchPath-1: options.php\n"
+"X-Poedit-KeywordsList: __\n"
 
-#: options.php:94
-msgid "WP Author Security Settings"
-msgstr "WP Author Security Einstellungen"
+#: wp-author-security.php:156
+msgid "The entered username or password is not correct. <a href=%s>Lost your password</a>?"
+msgstr "Der eingegebene Benutzername oder das Passwort ist nicht korrekt. <a href=%s>Passwort vergessen</a>?"
 
-#: options.php:100
-msgid "Stop author ID user enumeration"
-msgstr "Unterbinde Nutzer-ID Enumeration"
+#: options.php:159
+msgid "Displays a neutral message when either the username or password is incorrect."
+msgstr "Zeigt eine neutrale Fehlermeldung an, wenn der Benutzername oder das Passwort falsch ist."
 
-#: options.php:105 options.php:126
-msgid "don't show any users"
-msgstr "Zeige keine Nutzer"
-
-#: options.php:109 options.php:130
-msgid "show only users with posts"
-msgstr "Zeige nur Nutzer mit Beiträgen"
-
-#: options.php:113 options.php:134
-msgid "deactivate protection"
-msgstr "Deaktiviere Schutz"
-
-#: options.php:116
-msgid "Disable the /?author=&lt;id&gt; endpoint."
-msgstr "Zeige eine Standardfehlerseite für die URI: /?author=&lt;id&gt;."
-
-#: options.php:121
-msgid "Stop author NAME user enumeration"
-msgstr "Unterbinde Nutzer-Namen Enumeration"
-
-#: options.php:137
-msgid ""
-"Disable the /author/&lt;name&gt; and /?author_name=&lt;name&gt; endpoints."
-msgstr ""
-"Zeige eine Standardfehlerseite für die URI: /author/&lt;name&gt; und /?"
-"author_name=&lt;name&gt;."
-
-#: options.php:142
-msgid "Disable for logged in users"
-msgstr "Deaktiviere für angemeldete Nutzer"
-
-#: options.php:145
-msgid "Disable protection for logged in users."
-msgstr "Deaktiviert den Schutz für angemeldete Nutzer."
-
-#: options.php:150
-msgid "Protect REST API user enumeration"
-msgstr "Unterbinde REST API Nutzer-Enumeration"
-
-#: options.php:153
-msgid "Disable REST API endpoint wp-json/wp/v2/users."
-msgstr ""
-"Deaktiviert die REST API URI /wp-json/wp/v2/users und zeigt die "
-"Standardfehlerseite."
-
-#: options.php:157
+#: options.php:156
 msgid "Stop user enumeration on login/reset password form"
 msgstr "Unterbinde Enumeration auf der Login/Passwort vergessen Seite"
 
-#: options.php:160
-msgid ""
-"Displays a neutral message when either the username or password is incorrect."
-msgstr ""
-"Zeigt eine neutrale Fehlermeldung an, wenn der Benutzername oder das "
-"Passwort falsch ist."
+#: options.php:152
+msgid "Disable REST API endpoint wp-json/wp/v2/users."
+msgstr "Deaktiviert die REST API URI /wp-json/wp/v2/users und zeigt die Standardfehlerseite."
 
-#: wp-author-security.php:142
-#, php-format
-msgid ""
-"The entered username or password is not correct. <a href=%s>Lost your "
-"password</a>?"
-msgstr ""
-"Der eingegebene Benutzername oder das Passwort ist nicht korrekt. <a href="
-"%s>Passwort vergessen</a>?"
+#: options.php:149
+msgid "Protect REST API user enumeration"
+msgstr "Unterbinde REST API Nutzer-Enumeration"
 
-#~ msgid "Lost your password"
-#~ msgstr "Passw"
+#: options.php:144
+msgid "Disable protection for logged in users."
+msgstr "Deaktiviert den Schutz für angemeldete Nutzer."
+
+#: options.php:141
+msgid "Disable for logged in users"
+msgstr "Deaktiviere für angemeldete Nutzer"
+
+#: options.php:136
+msgid "Disable the /author/&lt;name&gt; and /?author_name=&lt;name&gt; endpoints."
+msgstr "Zeige eine Standardfehlerseite für die URI: /author/&lt;name&gt; und /?author_name=&lt;name&gt;."
+
+#: options.php:120
+msgid "Stop author NAME user enumeration"
+msgstr "Unterbinde Nutzer-Namen Enumeration"
+
+#: options.php:115
+msgid "Disable the /?author=&lt;id&gt; endpoint."
+msgstr "Zeige eine Standardfehlerseite für die URI: /?author=&lt;id&gt;."
+
+#: options.php:112 options.php:133
+msgid "deactivate protection"
+msgstr "Deaktiviere Schutz"
+
+#: options.php:108 options.php:129
+msgid "show only users with posts"
+msgstr "Zeige nur Nutzer mit Beiträgen"
+
+#: options.php:104 options.php:125
+msgid "don't show any users"
+msgstr "Zeige keine Nutzer"
+
+#: options.php:99
+msgid "Stop author ID user enumeration"
+msgstr "Unterbinde Nutzer-ID Enumeration"
+
+#: options.php:93
+msgid "WP Author Security Settings"
+msgstr "WP Author Security Einstellungen"
+
+#: options.php:164
+msgid "Remove author name in feeds"
+msgstr "Entferne Autorennamen in Feeds"
+
+#: options.php:167
+msgid "Setting this option will remove the author name in the /feed endpoint."
+msgstr "Diese Option entfernt den Autorennamen beim Aufruf der URI /feed."
+
+#: options.php:180
+msgid "Remove author name in embeds"
+msgstr "Entferne Autorennamen in eingebetteten Beiträgen"
+
+#: options.php:183
+msgid "Setting this option will remove the author name and link in the oEmbed API endpoint e.g.: /wp-json/oembed/1.0/embed?url=https://&lt;yourdomain&gt;."
+msgstr "Diese Option entfernt den Autorennamen und den Link beim Aufruf der oEmbed API z.B.: /wp-json/oembed/1.0/embed?url=https://&lt;yourdomain&gt;."
+
+#. Author URI of the plugin
+msgid "https://www.mgm-sp.com"
+msgstr "https://www.mgm-sp.com"
+
+#. Author of the plugin
+msgid "mgmsp"
+msgstr "mgmsp"
+
+#. Description of the plugin
+msgid "Protect against user enumeration attacks on author pages and other places where valid user names can be obtained."
+msgstr "Schützt vor dem Angriffsvektor der Nutzerenumeration auf Autorenseiten und anderen Stellen, wo gültige Benutzernamen ermittelt werden können."
+
+#. Plugin URI of the plugin
+msgid "https://github.com/mgm-sp/wp-author-security"
+msgstr "https://github.com/mgm-sp/wp-author-security"
+
+#. Plugin Name of the plugin
+msgid "WP Author Security"
+msgstr "WP Author Security"
